@@ -1,7 +1,11 @@
 # udev rules for the NUT USB drivers
 
-SUBSYSTEM!="usb_device", GOTO="nut-usbups_rules_end"
 ACTION!="add", GOTO="nut-usbups_rules_end"
+SUBSYSTEM=="usb_device", GOTO="nut-usbups_rules_real"
+SUBSYSTEM=="usb", GOTO="nut-usbups_rules_real"
+BUS!="usb", GOTO="nut-usbups_rules_end"
+
+LABEL="nut-usbups_rules_real"
 
 # MGE UPS SYSTEMS - usbhid-ups
 SYSFS{idVendor}=="0463", SYSFS{idProduct}=="ffff", MODE="664", GROUP="@RUN_AS_GROUP@"
